# The-Simpsons-Hit-and-Run-Android-for-mods

./: .gitignore  CHANGELOG.md  CHEATS.md  FEATURES.md  FUTURE_WORK.md  INSTALLATION.md  KNOWN_ISSUES.md  README.md  TOUCH_CONTROLS.md
android-project/app/: build.gradle
android-project/app/release/: output-metadata.json
android-project/app/releaseWithLogs/: output-metadata.json
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLControllerManager.java  SDLSurface.java
code/: CMakeLists.txt
code/ai/: actionbuttonhandler.cpp
code/camera/: followcam.cpp  supercamcentral.cpp  supercamcontroller.h
code/data/config/: androidconfigurationmanager.cpp  androidconfigurationmanager.h
code/debug/: profiler.cpp
code/input/: inputmanager.cpp  inputmanager.h  usercontroller.cpp  usercontroller.h
code/input/touch/: touchactionregistry.cpp  touchactionregistry.h  touchassetextractor.cpp  touchassetextractor.h  touchassetmanager.cpp  touchassetmanager.h  touchcameracontroller.cpp  touchcameracontroller.h  touchcontextresolver.cpp  touchcontextresolver.h  touchhudrenderer.cpp  touchhudrenderer.h  touchhudsystem.cpp  touchhudsystem.h  touchinputadapter.cpp  touchinputadapter.h  touchinputmodemanager.cpp  touchinputmodemanager.h  touchinteractionresolver.cpp  touchinteractionresolver.h  touchtypes.h
code/main/: game.cpp  platform.h  win32platform.cpp
code/mission/: bonusmissioninfo.cpp
code/presentation/: language.cpp  tutorialmanager.cpp
code/presentation/fmvplayer/: fmvuserinputhandler.cpp
code/presentation/gui/bootup/: guimanagerlanguage.cpp
code/presentation/gui/frontend/: guimanagerfrontend.cpp
code/presentation/gui/ingame/: guimanageringame.cpp  guiscreenhud.cpp  guiscreenhud.h  guiscreenmissionload.cpp  guiscreenpauseoptions.cpp  guiscreenpausesettings.cpp  guiscreenpausesettings.h  guiscreenpurchaserewards.cpp
code/presentation/gui/minigame/: guimanagerminigame.cpp
code/presentation/gui/utility/: hudmap.cpp  hudmap.h
code/render/RenderFlow/: renderflow.cpp  renderflow.h
code/render/RenderManager/: FrontEndRenderLayer.cpp  RenderManager.cpp
code/supersprint/: supersprintmanager.cpp
libs/pure3d/p3d/: sprite.cpp  sprite.hpp
libs/pure3d/pddi/gles/: glcon.cpp  glcon.hpp  glprog.cpp  glprog.hpp
libs/pure3d/pddi/gles/display_win32/: gldisplay.cpp
libs/radcore/inc/: radcontroller.hpp
libs/radcore/src/radcontroller/: sdlcontroller.cpp
libs/radmovie/test/src/: main.cpp
libs/radsound/test/coverage/src/: effects.cpp  positional.cpp
