set(SRR2_SOURCES
	"ai/actionbuttonhandler.cpp"
	"ai/actionbuttonmanager.cpp"
	"ai/actor/ActorAnimationUFO.cpp"
	"ai/actor/actoranimationwasp.cpp"
	"ai/actor/actor.cpp"
	"ai/actor/actordsg.cpp"
	"ai/actor/actormanager.cpp"
	"ai/actor/attackbehaviour.cpp"
	"ai/actor/attractionbehaviour.cpp"
	"ai/actor/cutcambehaviour.cpp"
	"ai/actor/evasionbehaviour.cpp"
	"ai/actor/flyingactor.cpp"
	"ai/actor/intersectionlist.cpp"
	"ai/actor/projectile.cpp"
	"ai/actor/projectiledsg.cpp"
	"ai/actor/spawnpoint.cpp"
	"ai/actor/stunnedbehaviour.cpp"
	"ai/actor/ufoattackbehaviour.cpp"
	"ai/actor/ufobeamalwaysonbehaviour.cpp"
	"ai/actor/ufobehaviour.cpp"
	"ai/automaticdoor.cpp"
	"ai/playanimonce.cpp"
	"ai/sequencer/actioncontroller.cpp"
	"ai/sequencer/action.cpp"
	"ai/sequencer/sequencer.cpp"
	"ai/sequencer/task.cpp"
	"ai/state.cpp"
	"ai/statemanager.cpp"
	"ai/vehicle/chaseai.cpp"
	"ai/vehicle/potentialfield.cpp"
	"ai/vehicle/potentials.cpp"
	"ai/vehicle/trafficai.cpp"
	"ai/vehicle/vehicleai.cpp"
	"ai/vehicle/vehicleairender.cpp"
	"ai/vehicle/waypointai.cpp"
	"atc/atcloader.cpp"
	"atc/atcmanager.cpp"
	"camera/animatedcam.cpp"
	"camera/bumpercam.cpp"
	"camera/chasecam.cpp"
	"camera/conversationcam.cpp"
	"camera/debugcam.cpp"
	"camera/firstpersoncam.cpp"
	"camera/followcam.cpp"
	"camera/kullcam.cpp"
	#"camera/pccam.cpp"
	"camera/railcam.cpp"
	"camera/relativeanimatedcam.cpp"
	"camera/reversecam.cpp"
	"camera/sinecosshaker.cpp"
	"camera/snapshotcam.cpp"
	"camera/staticcam.cpp"
	"camera/supercamcentral.cpp"
	"camera/supercamcontroller.cpp"
	"camera/supercam.cpp"
	"camera/supercammanager.cpp"
	"camera/supersprintcam.cpp"
	"camera/surveillancecam.cpp"
	"camera/trackercam.cpp"
	"camera/walkercam.cpp"
	"camera/wrecklesscam.cpp"
	"camera/wrecklesseventlistener.cpp"
	"cards/bonuscard.cpp"
	"cards/card.cpp"
	"cards/cardgallery.cpp"
	"cards/cardsdb.cpp"
	"cards/collectorcard.cpp"
	"cheats/cheatinputhandler.cpp"
	"cheats/cheatinputsystem.cpp"
	"cheats/cheats.cpp"
	"console/console.cpp"
	"console/debugconsolecallback.cpp"
	"console/fbstricmp.cpp"
	"console/nameinsensitive.cpp"
	"console/upcase.cpp"
	"contexts/bootupcontext.cpp"
	"contexts/context.cpp"
	"contexts/demo/democontext.cpp"
	"contexts/demo/loadingdemocontext.cpp"
	"contexts/entrycontext.cpp"
	"contexts/exitcontext.cpp"
	"contexts/frontendcontext.cpp"
	"contexts/gameplay/gameplaycontext.cpp"
	"contexts/gameplay/loadinggameplaycontext.cpp"
	"contexts/loadingcontext.cpp"
	"contexts/pausecontext.cpp"
	"contexts/playingcontext.cpp"
	"contexts/supersprint/loadingsupersprintcontext.cpp"
	"contexts/supersprint/supersprintcontext.cpp"
	"contexts/supersprint/supersprintfecontext.cpp"
	"data/gamedatamanager.cpp"
	"data/memcard/memorycardmanager.cpp"
	"data/PersistentWorldManager.cpp"
	"data/savegameinfo.cpp"
	"data/config/androidconfigurationmanager.cpp"
	"debug/debuginfo.cpp"
	"debug/profiler.cpp"
	"debug/section.cpp"
	"events/eventlistener.cpp"
	"events/eventmanager.cpp"
	"gameflow/gameflow.cpp"
	#"input/basedamper.cpp"
	"input/button.cpp"
	#"input/constanteffect.cpp"
	#"input/FEMouse.cpp"
	#"input/forceeffect.cpp"
	#"input/Gamepad.cpp"
	"input/inputmanager.cpp"
	#"input/Keyboard.cpp"
	"input/mappable.cpp"
	"input/mapper.cpp"
	#"input/Mouse.cpp"
	"input/MouseCursor.cpp"
	"input/RealController.cpp"
	"input/rumbleeffect.cpp"
	"input/rumblewin32.cpp"
	#"input/steeringspring.cpp"
	"input/usercontroller.cpp"
	#"input/usercontrollerWin32.cpp"
	#"input/virtualinputs.cpp"
	#"input/wheelrumble.cpp"
	"input/touch/touchactionregistry.cpp"
	"input/touch/touchinputmodemanager.cpp"
	"input/touch/touchinputadapter.cpp"
	"input/touch/touchcontextresolver.cpp"
	"input/touch/touchhudsystem.cpp"
	"input/touch/touchassetextractor.cpp"
	"input/touch/touchassetmanager.cpp"
	"input/touch/touchhudrenderer.cpp"
	"input/touch/touchcameracontroller.cpp"
	"input/touch/touchinteractionresolver.cpp"
	"interiors/interiormanager.cpp"
	"loading/cameradataloader.cpp"
	"loading/cementfilehandler.cpp"
	"loading/choreofilehandler.cpp"
	"loading/consolefilehandler.cpp"
	"loading/filehandlerfactory.cpp"
	"loading/iconfilehandler.cpp"
	"loading/intersectionloader.cpp"
	"loading/loadingmanager.cpp"
	"loading/locatorloader.cpp"
	"loading/p3dfilehandler.cpp"
	"loading/pathloader.cpp"
	"loading/roaddatasegmentloader.cpp"
	"loading/roadloader.cpp"
	"loading/scroobyfilehandler.cpp"
	"loading/soundfilehandler.cpp"
	"main/commandlineoptions.cpp"
	"main/game.cpp"
	"main/pchsrr2.cpp"
	"main/singletons.cpp"
	"main/tuidunaligned.cpp"
	"main/win32main.cpp"
	"main/win32platform.cpp"
	"memory/classsizetracker.cpp"
	"memory/createheap.cpp"
	"memory/leakdetection.cpp"
	"memory/memorypool.cpp"
	"memory/memoryutilities.cpp"
	"memory/propstats.cpp"
	"memory/srrmemory.cpp"
	"meta/actioneventlocator.cpp"
	"meta/carstartlocator.cpp"
	"meta/directionallocator.cpp"
	"meta/eventlocator.cpp"
	"meta/fovlocator.cpp"
	"meta/interiorentrancelocator.cpp"
	"meta/locator.cpp"
	"meta/occlusionlocator.cpp"
	"meta/recttriggervolume.cpp"
	"meta/scriptlocator.cpp"
	"meta/spheretriggervolume.cpp"
	"meta/splinelocator.cpp"
	"meta/staticcamlocator.cpp"
	"meta/triggerlocator.cpp"
	"meta/triggervolume.cpp"
	"meta/triggervolumetracker.cpp"
	"meta/zoneeventlocator.cpp"
	"mission/animatedicon.cpp"
	"mission/bonusmissioninfo.cpp"
	"mission/charactersheet/charactersheetmanager.cpp"
	"mission/conditions/damagecondition.cpp"
	"mission/conditions/followcondition.cpp"
	"mission/conditions/getoutofcarcondition.cpp"
	"mission/conditions/keepbarrelcondition.cpp"
	"mission/conditions/leaveinteriorcondition.cpp"
	"mission/conditions/missioncondition.cpp"
	"mission/conditions/notabductedcondition.cpp"
	"mission/conditions/outofboundscondition.cpp"
	"mission/conditions/positioncondition.cpp"
	"mission/conditions/racecondition.cpp"
	"mission/conditions/timeoutcondition.cpp"
	"mission/conditions/vehiclecarryingstateprop.cpp"
	"mission/conditions/vehiclecondition.cpp"
	"mission/gameplaymanager.cpp"
	"mission/haspresentationinfo.cpp"
	"mission/mission.cpp"
	"mission/missionmanager.cpp"
	"mission/missionscriptloader.cpp"
	"mission/missionstage.cpp"
	"mission/nocopbonusobjective.cpp"
	"mission/nodamagebonusobjective.cpp"
	"mission/objectives/buycarobjective.cpp"
	"mission/objectives/buyskinobjective.cpp"
	"mission/objectives/coinobjective.cpp"
	"mission/objectives/collectdumpedobjective.cpp"
	"mission/objectives/collectibleobjective.cpp"
	"mission/objectives/deliveryobjective.cpp"
	"mission/objectives/destroybossobjective.cpp"
	"mission/objectives/destroyobjective.cpp"
	"mission/objectives/dialogueobjective.cpp"
	"mission/objectives/fmvobjective.cpp"
	"mission/objectives/followobjective.cpp"
	"mission/objectives/getinobjective.cpp"
	"mission/objectives/gooutsideobjective.cpp"
	"mission/objectives/gotoobjective.cpp"
	"mission/objectives/interiorobjective.cpp"
	"mission/objectives/loadvehicleobjective.cpp"
	"mission/objectives/loseobjective.cpp"
	"mission/objectives/missionobjective.cpp"
	"mission/objectives/pickupitemobjective.cpp"
	"mission/objectives/raceobjective.cpp"
	"mission/objectives/talktoobjective.cpp"
	"mission/objectives/timerobjective.cpp"
	"mission/racepositionbonusobjective.cpp"
	"mission/respawnmanager/respawnentity.cpp"
	"mission/respawnmanager/respawnmanager.cpp"
	"mission/rewards/merchandise.cpp"
	"mission/rewards/reward.cpp"
	"mission/rewards/rewardsmanager.cpp"
	"mission/safezone/safezone.cpp"
	"mission/statepropcollectible.cpp"
	"mission/timeremainbonusobjective.cpp"
	"mission/ufo/tractorbeam.cpp"
	"mission/ufo/ufo.cpp"
	"pedpaths/path.cpp"
	"pedpaths/pathmanager.cpp"
	"pedpaths/pathsegment.cpp"
	"presentation/animplayer.cpp"
	"presentation/blinker.cpp"
	"presentation/cameraplayer.cpp"
	"presentation/fmvplayer/fmvplayer.cpp"
	"presentation/fmvplayer/fmvuserinputhandler.cpp"
	"presentation/gui/backend/guimanagerbackend.cpp"
	"presentation/gui/backend/guiscreendemo.cpp"
	"presentation/gui/backend/guiscreenloading.cpp"
	"presentation/gui/backend/guiscreenloadingfe.cpp"
	"presentation/gui/bootup/guimanagerbootup.cpp"
	"presentation/gui/bootup/guimanagerlanguage.cpp"
	"presentation/gui/bootup/guiscreenbootupload.cpp"
	"presentation/gui/bootup/guiscreenlanguage.cpp"
	"presentation/gui/bootup/guiscreenlicense.cpp"
	"presentation/gui/frontend/guimanagerfrontend.cpp"
	"presentation/gui/frontend/guiscreencardgallery.cpp"
	"presentation/gui/frontend/guiscreencontroller.cpp"
	#"presentation/gui/frontend/guiscreencontrollerWin32.cpp"
	#"presentation/gui/frontend/guiscreendisplay.cpp"
	"presentation/gui/frontend/guiscreenloadgame.cpp"
	"presentation/gui/frontend/guiscreenmainmenu.cpp"
	"presentation/gui/frontend/guiscreenmissiongallery.cpp"
	#"presentation/gui/frontend/guiscreenmultichoosechar.cpp"
	#"presentation/gui/frontend/guiscreenmultisetup.cpp"
	"presentation/gui/frontend/guiscreenoptions.cpp"
	"presentation/gui/frontend/guiscreenplaymovie.cpp"
	"presentation/gui/frontend/guiscreenscrapbookcontents.cpp"
	"presentation/gui/frontend/guiscreenscrapbook.cpp"
	"presentation/gui/frontend/guiscreenscrapbookstats.cpp"
	"presentation/gui/frontend/guiscreenskingallery.cpp"
	"presentation/gui/frontend/guiscreensound.cpp"
	"presentation/gui/frontend/guiscreensplash.cpp"
	"presentation/gui/frontend/guiscreenvehiclegallery.cpp"
	"presentation/gui/frontend/guiscreenviewcredits.cpp"
	"presentation/gui/frontend/guiscreenviewmovies.cpp"
	"presentation/gui/guientity.cpp"
	"presentation/gui/guimanager.cpp"
	"presentation/gui/guimenu.cpp"
	"presentation/gui/guimenuitem.cpp"
	"presentation/gui/guiscreen.cpp"
	"presentation/gui/guiscreenmemcardcheck.cpp"
	"presentation/gui/guiscreenmemorycard.cpp"
	"presentation/gui/guiscreenmessage.cpp"
	"presentation/gui/guiscreenprompt.cpp"
	"presentation/gui/guisystem.cpp"
	"presentation/gui/guitextbible.cpp"
	"presentation/gui/guiuserinputhandler.cpp"
	"presentation/gui/guiwindow.cpp"
	"presentation/gui/ingame/guimanageringame.cpp"
	"presentation/gui/ingame/guiscreencreditspostfmv.cpp"
	"presentation/gui/ingame/guiscreenhastransitions.cpp"
	"presentation/gui/ingame/guiscreenhud.cpp"
	#"presentation/gui/ingame/guiscreenhudmap.cpp"
	"presentation/gui/ingame/guiscreeniriswipe.cpp"
	"presentation/gui/ingame/guiscreenletterbox.cpp"
	"presentation/gui/ingame/guiscreenlevelend.cpp"
	"presentation/gui/ingame/guiscreenlevelstats.cpp"
	"presentation/gui/ingame/guiscreenmissionbase.cpp"
	"presentation/gui/ingame/guiscreenmissionload.cpp"
	"presentation/gui/ingame/guiscreenmissionover.cpp"
	"presentation/gui/ingame/guiscreenmissionselect.cpp"
	"presentation/gui/ingame/guiscreenmissionsuccess.cpp"
	"presentation/gui/ingame/guiscreenmultihud.cpp"
	"presentation/gui/ingame/guiscreenpausecontroller.cpp"
	"presentation/gui/ingame/guiscreenpause.cpp"
	#"presentation/gui/ingame/guiscreenpausedisplay.cpp"
	"presentation/gui/ingame/guiscreenpausemission.cpp"
	"presentation/gui/ingame/guiscreenpauseoptions.cpp"
	"presentation/gui/ingame/guiscreenpausesettings.cpp"
	"presentation/gui/ingame/guiscreenpausesound.cpp"
	"presentation/gui/ingame/guiscreenpausesunday.cpp"
	"presentation/gui/ingame/guiscreenphonebooth.cpp"
	"presentation/gui/ingame/guiscreenpurchaserewards.cpp"
	"presentation/gui/ingame/guiscreenrewards.cpp"
	"presentation/gui/ingame/guiscreensavegame.cpp"
	"presentation/gui/ingame/guiscreentutorial.cpp"
	"presentation/gui/ingame/guiscreenviewcards.cpp"
	"presentation/gui/ingame/hudevents/hudcardcollected.cpp"
	"presentation/gui/ingame/hudevents/hudcoincollected.cpp"
	"presentation/gui/ingame/hudevents/hudcountdown.cpp"
	"presentation/gui/ingame/hudevents/hudeventhandler.cpp"
	"presentation/gui/ingame/hudevents/hudhitnrun.cpp"
	"presentation/gui/ingame/hudevents/huditemdropped.cpp"
	"presentation/gui/ingame/hudevents/hudmissionobjective.cpp"
	"presentation/gui/ingame/hudevents/hudmissionprogress.cpp"
	"presentation/gui/ingame/hudevents/hudwaspdestroyed.cpp"
	"presentation/gui/minigame/guimanagerminigame.cpp"
	"presentation/gui/minigame/guiscreenminihud.cpp"
	"presentation/gui/minigame/guiscreenminimenu.cpp"
	"presentation/gui/minigame/guiscreenminipause.cpp"
	"presentation/gui/minigame/guiscreenminisummary.cpp"
	"presentation/gui/utility/hudmapcam.cpp"
	"presentation/gui/utility/hudmap.cpp"
	"presentation/gui/utility/numerictext.cpp"
	"presentation/gui/utility/scrollingtext.cpp"
	"presentation/gui/utility/slider.cpp"
	"presentation/gui/utility/specialfx.cpp"
	"presentation/gui/utility/teletypetext.cpp"
	"presentation/gui/utility/transitions.cpp"
	"presentation/language.cpp"
	"presentation/mouthflapper.cpp"
	"presentation/nisplayer.cpp"
	"presentation/playerdrawable.cpp"
	"presentation/presentationanimator.cpp"
	"presentation/presentation.cpp"
	"presentation/presevents/fmvevent.cpp"
	"presentation/presevents/nisevent.cpp"
	"presentation/presevents/presentationevent.cpp"
	"presentation/presevents/transevent.cpp"
	"presentation/simpleanimationplayer.cpp"
	"presentation/transitionplayer.cpp"
	"presentation/tutorialmanager.cpp"
	"render/animentitydsgmanager/animentitydsgmanager.cpp"
	"render/breakables/breakablesmanager.cpp"
	"render/Culling/BoxPts.cpp"
	"render/Culling/CellBlock.cpp"
	"render/Culling/Cell.cpp"
	"render/Culling/CoordSubList.cpp"
	"render/Culling/CullData.cpp"
	"render/Culling/HexahedronP.cpp"
	"render/Culling/ISpatialProxy.cpp"
	"render/Culling/OctTreeData.cpp"
	"render/Culling/OctTreeNode.cpp"
	"render/Culling/SpatialTree.cpp"
	"render/Culling/SpatialTreeIter.cpp"
	"render/Culling/SphereSP.cpp"
	"render/Culling/VectorLib.cpp"
	"render/Culling/WorldScene.cpp"
	"render/DSG/animcollisionentitydsg.cpp"
	"render/DSG/animentitydsg.cpp"
	"render/DSG/breakableobjectdsg.cpp"
	"render/DSG/collisionentitydsg.cpp"
	"render/DSG/DSGFactory.cpp"
	"render/DSG/DynaPhysDSG.cpp"
	"render/DSG/FenceEntityDSG.cpp"
	"render/DSG/IEntityDSG.cpp"
	"render/DSG/InstAnimDynaPhysDSG.cpp"
	"render/DSG/InstDynaPhysDSG.cpp"
	"render/DSG/InstStatEntityDSG.cpp"
	"render/DSG/InstStatPhysDSG.cpp"
	"render/DSG/IntersectDSG.cpp"
	"render/DSG/LensFlareDSG.cpp"
	"render/DSG/StatePropDSG.cpp"
	"render/DSG/StaticEntityDSG.cpp"
	"render/DSG/StaticPhysDSG.cpp"
	"render/DSG/TriStripDSG.cpp"
	"render/DSG/WorldSphereDSG.cpp"
	"render/IntersectManager/IntersectManager.cpp"
	"render/Loaders/AllWrappers.cpp"
	"render/Loaders/AnimCollLoader.cpp"
	"render/Loaders/AnimDSGLoader.cpp"
	"render/Loaders/AnimDynaPhysLoader.cpp"
	"render/Loaders/BillboardWrappedLoader.cpp"
	"render/Loaders/breakableobjectloader.cpp"
	"render/Loaders/DynaPhysLoader.cpp"
	"render/Loaders/FenceLoader.cpp"
	"render/Loaders/GeometryWrappedLoader.cpp"
	"render/Loaders/instparticlesystemloader.cpp"
	"render/Loaders/InstStatEntityLoader.cpp"
	"render/Loaders/InstStatPhysLoader.cpp"
	"render/Loaders/IntersectLoader.cpp"
	"render/Loaders/LensFlareLoader.cpp"
	"render/Loaders/StaticEntityLoader.cpp"
	"render/Loaders/StaticPhysLoader.cpp"
	"render/Loaders/TreeDSGLoader.cpp"
	"render/Loaders/WorldSphereLoader.cpp"
	"render/Particles/particlemanager.cpp"
	"render/Particles/particlesystemdsg.cpp"
	"render/Particles/vehicleparticleemitter.cpp"
	"render/RenderFlow/renderflow.cpp"
	"render/RenderManager/FrontEndRenderLayer.cpp"
	"render/RenderManager/RenderLayer.cpp"
	"render/RenderManager/RenderManager.cpp"
	"render/RenderManager/WorldRenderLayer.cpp"
	"roads/geometry.cpp"
	"roads/intersection.cpp"
	"roads/lane.cpp"
	"roads/road.cpp"
	"roads/roadmanager.cpp"
	"roads/roadrender.cpp"
	"roads/roadrendertest.cpp"
	"roads/roadsegment.cpp"
	"roads/roadsegmentdata.cpp"
	"roads/trafficcontrol.cpp"
	"sound/avatar/avatarsoundplayer.cpp"
	"sound/avatar/carsoundparameters.cpp"
	"sound/avatar/soundavatar.cpp"
	"sound/avatar/vehiclesounddebugpage.cpp"
	"sound/avatar/vehiclesoundplayer.cpp"
	"sound/dialog/conversation.cpp"
	"sound/dialog/conversationmatcher.cpp"
	"sound/dialog/dialogcoordinator.cpp"
	"sound/dialog/dialogline.cpp"
	"sound/dialog/dialoglist.cpp"
	"sound/dialog/dialogpriorityqueue.cpp"
	"sound/dialog/dialogqueueelement.cpp"
	"sound/dialog/dialogselectiongroup.cpp"
	"sound/dialog/dialogsounddebugpage.cpp"
	"sound/dialog/playabledialog.cpp"
	"sound/dialog/selectabledialog.cpp"
	"sound/listener.cpp"
	"sound/movingpositional/actorplayer.cpp"
	"sound/movingpositional/aivehiclesoundplayer.cpp"
	"sound/movingpositional/animobjsoundplayer.cpp"
	"sound/movingpositional/avatarvehicleposnplayer.cpp"
	"sound/movingpositional/movingsoundmanager.cpp"
	"sound/movingpositional/platformsoundplayer.cpp"
	"sound/movingpositional/trafficsoundplayer.cpp"
	"sound/movingpositional/vehicleposnsoundplayer.cpp"
	"sound/movingpositional/waspsoundplayer.cpp"
	"sound/music/musicplayer.cpp"
	"sound/nis/nissoundplayer.cpp"
	"sound/positionalsoundplayer.cpp"
	"sound/simpsonssoundplayer.cpp"
	"sound/soundcluster.cpp"
	"sound/sounddebug/sounddebugdisplay.cpp"
	"sound/sounddebug/sounddebugpage.cpp"
	"sound/soundfx/positionalsoundsettings.cpp"
	"sound/soundfx/reverbcontroller.cpp"
	"sound/soundfx/reverbsettings.cpp"
	"sound/soundfx/soundeffectplayer.cpp"
	"sound/soundfx/soundfxfrontendlogic.cpp"
	"sound/soundfx/soundfxgameplaylogic.cpp"
	"sound/soundfx/soundfxlogic.cpp"
	"sound/soundfx/soundfxpauselogic.cpp"
	"sound/soundfx/win32reverbcontroller.cpp"
	"sound/soundloader.cpp"
	"sound/soundmanager.cpp"
	"sound/soundrenderercallback.cpp"
	"sound/soundrenderer/dasoundplayer.cpp"
	"sound/soundrenderer/fader.cpp"
	"sound/soundrenderer/musicsoundplayer.cpp"
	"sound/soundrenderer/playermanager.cpp"
	"sound/soundrenderer/scripts/apu.cpp"
	"sound/soundrenderer/scripts/bart.cpp"
	"sound/soundrenderer/scripts/cars.cpp"
	"sound/soundrenderer/scripts/effects.cpp"
	"sound/soundrenderer/scripts/english.cpp"
	"sound/soundrenderer/scripts/homer.cpp"
	"sound/soundrenderer/scripts/levels.cpp"
	"sound/soundrenderer/scripts/lisa.cpp"
	"sound/soundrenderer/scripts/marge.cpp"
	"sound/soundrenderer/scripts/tuning.cpp"
	"sound/soundrenderer/soundallocatedresource.cpp"
	"sound/soundrenderer/sounddynaload.cpp"
	"sound/soundrenderer/soundnucleus.cpp"
	"sound/soundrenderer/soundrenderingmanager.cpp"
	"sound/soundrenderer/soundresource.cpp"
	"sound/soundrenderer/soundresourcemanager.cpp"
	"sound/soundrenderer/soundtuner.cpp"
	"sound/soundrenderer/tunerdebugpage.cpp"
	"sound/soundrenderer/wireplayers.cpp"
	"sound/soundrenderer/wiresystem.cpp"
	"sound/tuning/globalsettings.cpp"
	"stateprop/stateprop.cpp"
	"stateprop/statepropdata.cpp"
	"supersprint/supersprintdata.cpp"
	"supersprint/supersprintmanager.cpp"
	"worldsim/avatar.cpp"
	"worldsim/avatarmanager.cpp"
	"worldsim/character/aicharactercontroller.cpp"
	"worldsim/character/charactercontroller.cpp"
	"worldsim/character/character.cpp"
	"worldsim/character/charactermanager.cpp"
	"worldsim/character/charactermappable.cpp"
	"worldsim/character/characterrenderable.cpp"
	"worldsim/character/charactertarget.cpp"
	"worldsim/character/footprint/footprintmanager.cpp"
	"worldsim/coins/coinmanager.cpp"
	"worldsim/coins/sparkle.cpp"
	"worldsim/groundplanepool.cpp"
	"worldsim/harass/chasemanager.cpp"
	"worldsim/hitnrunmanager.cpp"
	"worldsim/huskpool.cpp"
	"worldsim/parkedcars/parkedcarmanager.cpp"
	"worldsim/ped/pedestrian.cpp"
	"worldsim/ped/pedestrianmanager.cpp"
	"worldsim/redbrick/geometryvehicle.cpp"
	"worldsim/redbrick/physicslocomotioncontrollerforces.cpp"
	"worldsim/redbrick/physicslocomotion.cpp"
	"worldsim/redbrick/redbrickcollisionsolveragent.cpp"
	"worldsim/redbrick/rootmatrixdriver.cpp"
	"worldsim/redbrick/suspensionjointdriver.cpp"
	"worldsim/redbrick/trafficbodydrawable.cpp"
	"worldsim/redbrick/trafficlocomotion.cpp"
	"worldsim/redbrick/vehiclecontroller/aivehiclecontroller.cpp"
	"worldsim/redbrick/vehiclecontroller/humanvehiclecontroller.cpp"
	"worldsim/redbrick/vehiclecontroller/vehiclecontroller.cpp"
	"worldsim/redbrick/vehiclecontroller/vehiclemappable.cpp"
	"worldsim/redbrick/vehicle.cpp"
	"worldsim/redbrick/vehicleeventlistener.cpp"
	"worldsim/redbrick/vehicleinit.cpp"
	"worldsim/redbrick/vehiclelocomotion.cpp"
	"worldsim/redbrick/wheel.cpp"
	"worldsim/skidmarks/skidmark.cpp"
	"worldsim/skidmarks/SkidMarkGenerator.cpp"
	"worldsim/skidmarks/skidmarkmanager.cpp"
	"worldsim/spawn/spawnmanager.cpp"
	"worldsim/traffic/trafficmanager.cpp"
	"worldsim/vehiclecentral.cpp"
	"worldsim/worldcollisionsolveragent.cpp"
	"worldsim/worldobject.cpp"
	"worldsim/worldphysicsmanager.cpp"
)
if(SRR2_REGION STREQUAL "PAL")
	list(APPEND SRR2_SOURCES
		"sound/soundrenderer/scripts/french.cpp"
		"sound/soundrenderer/scripts/german.cpp"
		"sound/soundrenderer/scripts/spanish.cpp"
	)
endif()

if(ANDROID)
    add_library(main SHARED ${SRR2_SOURCES})
    set(SRR2_TARGET main)
else()
    add_executable(${PROJECT_NAME} ${SRR2_SOURCES})
    set(SRR2_TARGET ${PROJECT_NAME})
endif()

target_link_libraries(${SRR2_TARGET}
	${SDL_LIBRARY}
	choreo
	p3d
	pddi
	poser
	radcore
	radcontent
	radmath
	radmovie
	radmusic
	radsound
	radscript
	scrooby
	sim
	Threads::Threads
)

# --- Android: OpenAL + libs del sistema ---
if(ANDROID)
	target_link_libraries(${SRR2_TARGET}
		OpenAL        # target de openal-soft (si lo añadiste con add_subdirectory)
		log
		android
		EGL
		GLESv2
	)
endif()

if(SRR2_MICROPROFILE AND WIN32)
	# needed for microprofile
	target_link_libraries(${SRR2_TARGET} wsock32)
endif()
if(VITA)
	if(SRR2_USE_VITAGL)
		target_link_libraries(${SRR2_TARGET}
			vitaGL
			vitashark
		)
	endif()
	target_link_libraries(${SRR2_TARGET}
		SceLibKernel_stub
		ScePvf_stub
		mathneon
		SceAudio_stub
		SceAppMgr_stub
		SceAppUtil_stub
		ScePgf_stub
		SceShaccCgExt
		SceShaccCg_stub
		SceCtrl_stub
		taihen_stub
		SceKernelDmacMgr_stub
		SceRazorCapture_stub_weak
	)
endif()
if(SRR2_USE_BINK)
    target_link_libraries(${SRR2_TARGET} bink)
else()
    if(ANDROID)
        find_package(ffmpeg CONFIG REQUIRED)
        target_link_libraries(${SRR2_TARGET}
            ffmpeg::headers
            ffmpeg::libavcodec.so
            ffmpeg::libavformat.so
            ffmpeg::libavutil.so
            ffmpeg::libswresample.so
            ffmpeg::libswscale.so
        )
    else()
        target_link_libraries(${SRR2_TARGET} PkgConfig::FFmpeg)
    endif()
endif()


option(SRR2_USE_PCH ON)
if (SRR2_USE_PCH)
	target_precompile_headers(${SRR2_TARGET} PRIVATE "main/pchsrr2.h")
endif()
